@startuml

title __MISC's Class Diagram__\n

  namespace com.apetrei.misc {
    class com.apetrei.misc.AABB {
        + AABB()
        + getMax()
        + getMin()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.ConvexPolygon2D {
        - vertices : List<Vector2>
        + ConvexPolygon2D()
        + ConvexPolygon2D()
        + getVertices()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.DebugFuctions {
        {static} ~ i : int
        {static} + saveBuffer()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.ExtraMath {
        {static} + compare()
        {static} + compare()
        {static} + compare()
        {static} + compareVectors()
        {static} + compareVectors()
        {static} + rotateVec()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Line {
        + Line()
        + Line()
        + findNormal()
        + getA()
        + getB()
        + lenghtSquared()
        + toString()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Vector2 {
        + x : float
        + y : float
        + Vector2()
        + Vector2()
        + Vector2()
        + add()
        + dot()
        + equals()
        + get()
        + getMagnitue()
        + lenghtSquared()
        + max()
        + min()
        + mul()
        + mul()
        + normalized()
        + set()
        + set()
        + setComponent()
        + sub()
        + toString()
    }
  }
  

  com.apetrei.misc.AABB o-- com.apetrei.misc.Vector2 : halfSize
  com.apetrei.misc.AABB o-- com.apetrei.misc.Vector2 : position
  com.apetrei.misc.AABB o-- com.apetrei.misc.Vector2 : size
  com.apetrei.misc.ConvexPolygon2D .up.|> java.io.Serializable
  com.apetrei.misc.Line .up.|> java.io.Serializable
  com.apetrei.misc.Line o-- com.apetrei.misc.Vector2 : A
  com.apetrei.misc.Line o-- com.apetrei.misc.Vector2 : B
  com.apetrei.misc.Vector2 .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
